[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/userInerface/InGameUI/PlayerHUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/userInerface/UI.gd" type="Script" id=2]
[ext_resource path="res://scenes/userInerface/InGameUI/OptionMenu/InGameMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/userInerface/InGameUI/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/userInerface/InGameUI/PlayerStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/userInerface/UIWindowControl.gd" type="Script" id=6]
[ext_resource path="res://scenes/userInerface/InGameUI/ChatBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/userInerface/InGameUI/QuestLog.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/userInerface/InGameUI/Skills.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/userInerface/InGameUI/KeybindUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/userInerface/DebugWindow/DebuggerWindow.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/userInerface/InGameUI/Equipment.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/userInerface/InGameUI/ButtonBar.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/userInerface/MessageBar.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/userInerface/Dialog.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="PlayerStats" parent="Control" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.0179687
anchor_top = 0.558333
anchor_right = 0.0179687
anchor_bottom = 0.558333
margin_top = -93.0
margin_right = 267.0
margin_bottom = 93.0

[node name="Inventory" parent="Control" instance=ExtResource( 4 )]
visible = false
anchor_left = 1.0625
anchor_top = 0.0555555
anchor_right = 1.0625
anchor_bottom = 0.0555556
margin_left = -296.0
margin_bottom = 432.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="Skills" parent="Control" instance=ExtResource( 9 )]
visible = false
anchor_left = 0.199219
anchor_top = 0.0305556
anchor_right = 0.363
anchor_bottom = 0.521
margin_right = 88.3588
margin_bottom = 152.88
rect_scale = Vector2( 0.7, 0.7 )

[node name="KeyBinds" parent="Control" instance=ExtResource( 10 )]
visible = false

[node name="Equipment" parent="Control" instance=ExtResource( 12 )]
visible = false
anchor_left = 0.01875
anchor_top = 0.0333333
anchor_right = 0.01875
anchor_bottom = 0.0333333
margin_left = 0.0
margin_top = 0.0
margin_right = 306.0
margin_bottom = 509.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="QuestLog" parent="Control" instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.0375
anchor_right = 0.667562
anchor_bottom = 0.327333

[node name="ChatBox" parent="Control" instance=ExtResource( 7 )]
margin_top = -134.0
margin_bottom = -102.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MessageBar" parent="Control" instance=ExtResource( 14 )]
margin_top = 616.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonBar" parent="Control" instance=ExtResource( 13 )]
margin_left = 625.0
margin_top = 616.0
margin_right = 1280.0
margin_bottom = 640.0

[node name="PlayerHUD" parent="Control" instance=ExtResource( 1 )]
anchor_left = 0.00078125
anchor_right = 0.00703125
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InGameMenu" parent="Control" instance=ExtResource( 3 )]
visible = false
margin_left = 18.0
margin_top = 19.0
margin_right = -22.0
margin_bottom = -21.0
mouse_filter = 2

[node name="DebuggerWindow" parent="Control" instance=ExtResource( 11 )]

[node name="GameInfo" type="Control" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -121.0
margin_top = 5.0
margin_bottom = 19.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/GameInfo"]
margin_right = 121.0
margin_bottom = 14.0
size_flags_horizontal = 3
alignment = 1

[node name="FPSCounter" type="Label" parent="Control/GameInfo/HBoxContainer"]
margin_left = 2.0
margin_top = 1.0
margin_right = 45.0
margin_bottom = 12.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "FPS: 500	"
align = 2

[node name="PingCounter" type="Label" parent="Control/GameInfo/HBoxContainer"]
margin_left = 49.0
margin_top = 1.0
margin_right = 118.0
margin_bottom = 12.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "Ping: 1500 ms"
align = 2

[node name="Timer" type="Timer" parent="Control/GameInfo/HBoxContainer"]
autostart = true

[node name="DialogBox" parent="." instance=ExtResource( 15 )]
visible = false

[connection signal="gui_input" from="Control/KeyBinds" to="Control/KeyBinds" method="_on_KeyBinds_gui_input"]
[connection signal="timeout" from="Control/GameInfo/HBoxContainer/Timer" to="Control" method="_on_Timer_timeout"]

[editable path="Control/ButtonBar"]
